# Znanstveni-kalkulator

./: Prezentacija_FunkcijskiZnanstveniKalkulator.pptx  Znanstveni-kalkulator.cabal  style.css
Dokumentacija/: Prezentacija_FunkcijskiZnanstveniKalkulator.pptx
ZK_TERMINAL_VERSION/: CHANGELOG.md  LICENSE  Znanstveni-kalkulator.cabal
ZK_TERMINAL_VERSION/dist-newstyle/cache/: compiler  config  improved-plan  plan.json  solver-plan  source-hashes
ZK_TERMINAL_VERSION/src/: Main.hs  MathOperations.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Main.hs  MathOperations.hs  MathParser.hs
static/css/: style.css
static/js/: script.js
temp_stuff/: PokusajiKoda.hs
temp_stuff/ZK_TERMINAL_VERSION/: CHANGELOG.md  LICENSE
temp_stuff/ZK_TERMINAL_VERSION/dist-newstyle/cache/: elaborated-plan
temp_stuff/ZK_TERMINAL_VERSION/src/: Main.hs  MathOperations.hs
